Fix gradient being too dark

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -70,11 +70,12 @@ html::before {
   z-index: -1;
   background-color: #1a1c24;
   background-image:
-    radial-gradient(at 0% 0%, rgba(58, 123, 213, 0.3) 0, transparent 50%),
-    radial-gradient(at 50% 0%, rgba(121, 159, 225, 0.25) 0, transparent 60%),
-    radial-gradient(at 100% 0%, rgba(30, 144, 255, 0.3) 0, transparent 50%),
-    radial-gradient(at 80% 50%, rgba(58, 123, 213, 0.15) 0, transparent 40%),
-    radial-gradient(at 20% 80%, rgba(0, 123, 255, 0.1) 0, transparent 50%);
+    radial-gradient(at 0% 0%, rgba(58, 123, 213, 0.35) 0, transparent 50%),
+    radial-gradient(at 100% 0%, rgba(30, 144, 255, 0.35) 0, transparent 50%),
+    radial-gradient(at 50% 0%, rgba(121, 159, 225, 0.25) 0, transparent 50%),
+    radial-gradient(at 50% 50%, rgba(58, 123, 213, 0.2) 0, transparent 70%),
+    radial-gradient(at 0% 100%, rgba(0, 123, 255, 0.1) 0, transparent 50%),
+    radial-gradient(at 100% 100%, rgba(58, 123, 213, 0.1) 0, transparent 50%);
   background-size: cover;
   background-attachment: fixed;
 }
